[tool.poetry]
name = "ytissues"
version = "0.0.2"
description = ""
authors = ["Karsten Schulz <github@karstenschulz.biz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = {extras = ["mccabe"], version = "^4.0.1"}
pre-commit = "^2.17.0"
isort = "^5.10.1"
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.1"}

[tool.poetry.scripts]
yt = 'ytissues.cli:main'

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["ytissues"]

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--strict-markers -ra"
xfail_strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
