[project]
name = "ytbackup"
version = "0.0.2"
description = "Download Youtrack issues and knowledgebase articles."
authors = ["Karsten Schulz <ks@kaschu.one>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "rich",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8",
    "isort",
    "pip-tools",
    "pre-commit",
    "pytest",
]

[project.scripts]
yt = 'ytissues.cli:main'

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["ytissues"]

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--strict-markers -ra"
xfail_strict = true

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~=68.0.0",
    "wheel ~=0.40.0",
]
